<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:weightSum="3">

            <RelativeLayout
                android:id="@+id/relative_layout_crop_as_circle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view_crop_as_circle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:padding="7dp"
                    app:srcCompat='@drawable/ic_crop_circle' />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_view_crop_as_circle"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_medium"
                    android:lines="2"
                    android:text="@string/crop_as_circle"
                    android:textAlignment="center"
                    android:textColor="#555"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_crop_as_rect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view_crop_as_rect"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:padding="7dp"
                    app:srcCompat='@drawable/ic_crop_rec' />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_view_crop_as_rect"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/roboto_medium"
                    android:lines="2"
                    android:text="@string/crop_as_rec"
                    android:textAlignment="center"
                    android:textColor="#555"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_no_crop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view_no_crop"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:padding="7dp"
                    app:srcCompat='@drawable/ic_editor' />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/image_view_no_crop"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/roboto_medium"
                    android:lines="2"
                    android:text="@string/no_crop"
                    android:textAlignment="center"
                    android:textColor="#555"
                    android:textSize="14dp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>