<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:elevation="10dp"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:minHeight="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/banner_flipper"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="45dp"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/ic_round_undo_inactive_24px"
                    app:tint="#d9d9d9" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="45dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_round_redo_inactive_24px"
                    app:tint="#d9d9d9" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/redo_uodo_panel"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/banner_flipper"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/uodo_btn"
                    android:layout_width="45dp"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="10dp"
                    app:srcCompat="@drawable/ic_round_undo_inactive_24px"
                    app:tint="#25D366" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/redo_btn"
                    android:layout_width="45dp"
                    android:layout_height="fill_parent"
                    app:srcCompat="@drawable/ic_round_redo_inactive_24px"
                    app:tint="#25D366" />
            </LinearLayout>

            <ViewFlipper
                android:id="@+id/banner_flipper"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:flipInterval="1000"
                android:gravity="center">

                <TextView
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="#25D366"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/apply"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/apply"
                    android:textColor="#25D366"
                    android:textSize="20sp" />
            </ViewFlipper>
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_btn"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="left|center_vertical"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_round_arrow_back_24"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:visibility="gone" />


    </FrameLayout>

    <com.stickers.bank.ui.widgets.CustomViewPager
        android:id="@+id/bottom_gallery"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:elevation="10dp"
        android:overScrollMode="never" />

    <FrameLayout
        android:id="@+id/work_space"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_gallery"
        android:layout_below="@id/banner"
        android:background="@color/white">

        <com.stickers.bank.ui.widgets.imagezoom.ImageViewTouch
            android:id="@+id/main_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center" />

        <com.stickers.bank.ui.widgets.StickerView
            android:id="@+id/sticker_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.stickers.bank.ui.widgets.CropImageView
            android:id="@+id/crop_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.stickers.bank.ui.widgets.RotateImageView
            android:id="@+id/rotate_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.stickers.bank.ui.widgets.TextStickerView
            android:id="@+id/text_sticker_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.stickers.bank.ui.widgets.CustomPaintView
            android:id="@+id/custom_paint_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

</RelativeLayout>